commit @AlOneill's fixes for squished detail column and search page styles

--- a/app/assets/stylesheets/styles/css/freereg_content.css
+++ b/app/assets/stylesheets/styles/css/freereg_content.css
@@ -374,23 +374,29 @@ dl.table-display
 .table--data--bold{
    font: 12px/1.5 bold sans-serif;
 }
-.ttip { position: relative; }
-.ttip img { cursor: help; padding: 0 5px; }
-
+.ttip {
+  position: relative;
+}
+.ttip img {
+  cursor: help; padding: 0 5px;
+}
+.ttip:focus {
+  outline: none;
+}
 .ttip .ttip__text {
+  background-color: #444;
+  border-radius: 6px;
+  color: #f4f4f4;
   font-weight: normal;
+  left: 10%;
+  line-height: 1.3;
+  max-width: 90%;
+  padding: 10px;
+  position: absolute;
+  top: 120%;
   visibility: hidden;
   width: 350px;
-  max-width: 100%;
-  max-width: calc(100% + 28px);
-  background-color: #444;
-  color: #f4f4f4;
-  padding: 10px;
-  border-radius: 6px;
-  position: absolute;
-  z-index: 1;
-  top: 120%;
-  left: 20px;
+  z-index: 1000;
 }
 .ttip .ttip__text::after {
   content: " ";
@@ -404,8 +410,19 @@ dl.table-display
 .ttip img:hover + .ttip__text, .ttip:focus .ttip__text {
   visibility: visible;
 }
+form#new_search_query fieldset.inputs > ol {
+    margin-left: -28px;
+    margin-right: 0;
+}
 
 input::-webkit-input-placeholder { color: #585858; font-style: italic; opacity: 1 ! important; }
 input::-moz-placeholder          { color: #585858; font-style: italic; opacity: 1 ! important; }
 input:-ms-input-placeholder      { color: #585858; font-style: italic; opacity: 1 ! important; }
-input::placeholder               { color: #585858; font-style: italic; opacity: 1 ! important; }
+input::placeholder { color: #585858; font-style: italic; opacity: 1 ! important; }
+
+table thead tr th:last-child, table tbody tr th:last-child, table tbody tr td:last-child {
+    padding-right: 14px;
+}
+table thead tr th:first-child, table tbody tr th:first-child {
+    padding-left: 14px;
+}
